# JSONSerializer

./: .gitignore  CMakeLists.txt  JSON.c  JSON.h  README.md  main.c
Tests/: JSONTest.cpp
Tests/ArduinoTest/: ArduinoTest.ino  JSON.h
